[gd_scene load_steps=19 format=3 uid="uid://sphd0fvqp02y"]

[ext_resource type="Script" path="res://Mob/Frog.gd" id="1_qxmap"]
[ext_resource type="Texture2D" uid="uid://k410bv7b0d7b" path="res://Textures/sprites/enemy-death/enemy-death-1.png" id="2_6skxc"]
[ext_resource type="Texture2D" uid="uid://dreudqrclmtro" path="res://Textures/sprites/enemy-death/enemy-death-2.png" id="3_brx3d"]
[ext_resource type="Texture2D" uid="uid://cmjy8wq0uh50k" path="res://Textures/sprites/enemy-death/enemy-death-3.png" id="4_tw1pp"]
[ext_resource type="Texture2D" uid="uid://3qy2518c5lul" path="res://Textures/sprites/enemy-death/enemy-death-4.png" id="5_tjfss"]
[ext_resource type="Texture2D" uid="uid://dgqqgfxcf4pxl" path="res://Textures/sprites/enemy-death/enemy-death-5.png" id="6_picw5"]
[ext_resource type="Texture2D" uid="uid://142qd5ji7vd6" path="res://Textures/sprites/enemy-death/enemy-death-6.png" id="7_tp7fk"]
[ext_resource type="Texture2D" uid="uid://hi368tn5eqmm" path="res://Textures/sprites/frog/idle/frog-idle-1.png" id="8_fa03b"]
[ext_resource type="Texture2D" uid="uid://cwnwve7pc6fuq" path="res://Textures/sprites/frog/idle/frog-idle-2.png" id="9_poukp"]
[ext_resource type="Texture2D" uid="uid://q5h3l4jev6se" path="res://Textures/sprites/frog/idle/frog-idle-3.png" id="10_dt5m5"]
[ext_resource type="Texture2D" uid="uid://c2rx4olevtmrp" path="res://Textures/sprites/frog/idle/frog-idle-4.png" id="11_uadqh"]
[ext_resource type="Texture2D" uid="uid://c2vq6cuer43w1" path="res://Textures/sprites/frog/jump/frog-jump-1.png" id="12_ylh2f"]
[ext_resource type="Texture2D" uid="uid://c87ikqxcob2w2" path="res://Textures/sprites/frog/jump/frog-jump-2.png" id="13_nsvfq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gjfo4"]
size = Vector2(22, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_0lj6m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_6skxc")
}, {
"duration": 1.0,
"texture": ExtResource("3_brx3d")
}, {
"duration": 1.0,
"texture": ExtResource("4_tw1pp")
}, {
"duration": 1.0,
"texture": ExtResource("5_tjfss")
}, {
"duration": 1.0,
"texture": ExtResource("6_picw5")
}, {
"duration": 1.0,
"texture": ExtResource("7_tp7fk")
}],
"loop": false,
"name": &"Death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_fa03b")
}, {
"duration": 1.0,
"texture": ExtResource("9_poukp")
}, {
"duration": 1.0,
"texture": ExtResource("10_dt5m5")
}, {
"duration": 1.0,
"texture": ExtResource("11_uadqh")
}, {
"duration": 1.0,
"texture": ExtResource("8_fa03b")
}, {
"duration": 1.0,
"texture": ExtResource("8_fa03b")
}, {
"duration": 1.0,
"texture": ExtResource("8_fa03b")
}, {
"duration": 1.0,
"texture": ExtResource("8_fa03b")
}, {
"duration": 1.0,
"texture": ExtResource("8_fa03b")
}, {
"duration": 1.0,
"texture": ExtResource("8_fa03b")
}, {
"duration": 1.0,
"texture": ExtResource("8_fa03b")
}, {
"duration": 1.0,
"texture": ExtResource("8_fa03b")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_ylh2f")
}, {
"duration": 1.0,
"texture": ExtResource("13_nsvfq")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_enqxv"]
radius = 80.0
height = 203.65

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tole0"]
size = Vector2(14, 13.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xsbt2"]
size = Vector2(25.5, 12.5)

[node name="Frog" type="CharacterBody2D"]
script = ExtResource("1_qxmap")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_gjfo4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -11)
sprite_frames = SubResource("SpriteFrames_0lj6m")
animation = &"Idle"
metadata/_edit_lock_ = true

[node name="PlayerDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(1, 61)
shape = SubResource("CapsuleShape2D_enqxv")

[node name="PlayerKills" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerKills"]
position = Vector2(0, -12.375)
shape = SubResource("RectangleShape2D_tole0")

[node name="PlayerCollision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCollision"]
position = Vector2(0.25, -7)
shape = SubResource("RectangleShape2D_xsbt2")

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="PlayerKills" to="." method="_on_player_kills_body_entered"]
[connection signal="body_entered" from="PlayerCollision" to="." method="_on_player_collision_body_entered"]
